--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -85,15 +85,14 @@
     </style>
 
     <style name="fmlStyleTag">
-
         <item name="android:textSize">8sp</item>
         <item name="android:textColor">#FF3466</item>
     </style>
-
     <style name="fmlStyleTextViewMin">
         <item name="android:textSize">8sp</item>
         <item name="android:textColor">#565665</item>
     </style>
+
     <style name="fmlStyleNameMovie">
 
         <item name="android:textSize">
@@ -101,5 +100,25 @@
         </item>
 
     </style>
+
+    <style name="fmlRatingBar" parent="Theme.AppCompat">
+        <item name="colorControlNormal">@color/colorTextGrey</item>
+        <item name="colorControlActivated">#FF3466</item>
+    </style>
+
+    <style name="fmlStyleReview">
+        <item name="android:textSize">8sp</item>
+        <item name="android:textColor">#6D6D80</item>
+    </style>
+
+        <style name="fmlCustomRatingBar" parent="@android:style/Widget.RatingBar">
+            <item name="android:progressDrawable">@drawable/custom_ratingbar</item>
+            <item name="android:minHeight">8dp</item>
+            <item name="minHeight">8dp</item>
+            <item name="maxHeight">8dp</item>
+            <item name="android:maxHeight">8dp</item>
+        </style>
+
+
 
 </resources>
