--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     <FrameLayout
         android:id="@+id/frameLayoutContainer"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:ignore="ObsoleteLayoutParam" />
 
 </FrameLayout>
