--- a/app/src/main/res/layout/fragment_movies_details.xml
+++ b/app/src/main/res/layout/fragment_movies_details.xml
@@ -141,6 +141,7 @@
                 app:layout_constraintStart_toStartOf="@+id/MovieDetailsTextViewSomeId"
                 app:layout_constraintTop_toTopOf="@+id/MovieDetailsTextViewSomeId" />
 
+
             <RatingBar
                 android:id="@+id/ratingBar"
                 android:layout_width="241dp"
@@ -149,6 +150,8 @@
                 android:layout_marginEnd="16dp"
                 android:numStars="5"
                 android:rating="4"
+                android:scaleX=".5"
+                android:scaleY=".5"
                 android:stepSize="1"
                 android:textAppearance="@style/tag"
                 android:theme="@style/MyRatingBar"
@@ -156,6 +159,8 @@
                 android:transformPivotY="0dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/TextViewTegLine2" />
+
+
 
             <TextView
                 android:id="@+id/textViewReview"
