--- a/app/src/main/res/layout/fragment_movies_list.xml
+++ b/app/src/main/res/layout/fragment_movies_list.xml
@@ -103,12 +103,16 @@
                 android:layout_height="0dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="-2dp"
+
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="27dp"
-                android:layout_marginEnd="22dp"
                 android:layout_marginBottom="4dp"
                 android:background="@drawable/fml_bg_move"
                 app:layout_constraintBottom_toBottomOf="@id/fmlGuidelinePath50"
+                app:layout_constraintEnd_toEndOf="@+id/fmlMovieOrig"
+
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/fmlWarszawaPo"
                 tools:ignore="MissingConstraints" />
@@ -122,7 +126,6 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
                 android:layout_marginStart="2dp"
-                android:layout_marginEnd="2dp"
                 android:layout_marginBottom="48dp"
                 android:contentDescription="@string/todo"
                 android:foreground="@drawable/mask"
@@ -131,6 +134,7 @@
                 app:layout_constraintBottom_toBottomOf="@id/fmlBackGroundMovie"
                 app:layout_constraintStart_toStartOf="@+id/fmlBackGroundMovie"
                 app:layout_constraintTop_toTopOf="@+id/fmlBackGroundMovie"
+                app:layout_constraintEnd_toStartOf=""
                 tools:ignore="MissingConstraints,UnusedAttribute" />
 
             <View
@@ -180,8 +184,8 @@
                 android:contentDescription="@string/todo"
                 android:scaleType="fitXY"
                 app:layout_constraintBottom_toTopOf="@+id/fmlGuidelinePath20"
-                app:layout_constraintStart_toStartOf="@+id/fmlMovieOrig"
                 app:layout_constraintEnd_toEndOf="@+id/fmlMovieOrig"
+                app:layout_constraintStart_toStartOf="@+id/fmlMovieOrig"
                 app:layout_constraintTop_toTopOf="@+id/fmlGuidelinePath20"
                 tools:ignore="MissingConstraints" />
 
@@ -271,6 +275,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/fmlTag"
                 tools:ignore="UnknownIdInLayout" />
 
-         </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
