--- a/app/src/main/res/layout/fragment_movies_details.xml
+++ b/app/src/main/res/layout/fragment_movies_details.xml
@@ -162,7 +162,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/TextViewTegLine2" />
 
             <TextView
-                android:id="@+id/textViewReview"
+                android:id="@+id/fmlTextViewReview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/textViewReview"
