--- a/app/src/main/res/layout/fragment_movies_list.xml
+++ b/app/src/main/res/layout/fragment_movies_list.xml
@@ -74,6 +74,7 @@
                 android:id="@+id/fmlRecyclerViewMovies"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="12dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
