--- a/app/src/main/res/layout/fragment_movies_details.xml
+++ b/app/src/main/res/layout/fragment_movies_details.xml
@@ -208,148 +208,14 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/StyleStoryLineContent" />
 
-            <View
-                android:id="@+id/movie1"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginBottom="4dp"
-                android:background="@drawable/ovie"
-                app:layout_constraintDimensionRatio="1:1"
-                app:layout_constraintEnd_toStartOf="@id/movie2"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/heading"
-                tools:ignore="ObsoleteLayoutParam" />
-
-            <TextView
-                android:id="@+id/nameCasts1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginTop="4dp"
-                android:gravity="center_vertical"
-                android:lineSpacingExtra="2sp"
-                android:minLines="2"
-                android:text="@string/robertDown"
-                android:textAppearance="@style/robertDown"
-                app:layout_constraintEnd_toEndOf="@+id/movie1"
-                app:layout_constraintStart_toStartOf="@+id/movie1"
-                app:layout_constraintTop_toBottomOf="@+id/movie1"
-                tools:ignore="ObsoleteLayoutParam" />
-
-            <View
-                android:id="@+id/movie2"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_margin="4dp"
-                android:background="@drawable/ovie1"
-                app:layout_constraintDimensionRatio="1:1"
-                app:layout_constraintEnd_toStartOf="@id/movie3"
-                app:layout_constraintStart_toEndOf="@+id/movie1"
-                app:layout_constraintTop_toBottomOf="@+id/heading"
-                tools:ignore="ObsoleteLayoutParam" />
-
-            <TextView
-                android:id="@+id/nameCasts2"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginTop="4dp"
-                android:gravity="center_vertical"
-                android:minLines="2"
-                android:text="@string/chrisEvans"
-                android:textAppearance="@style/robertDown"
-                app:layout_constraintEnd_toEndOf="@+id/movie2"
-                app:layout_constraintStart_toStartOf="@+id/movie2"
-                app:layout_constraintTop_toBottomOf="@+id/movie2"
-                tools:ignore="ObsoleteLayoutParam" />
-
-            <View
-                android:id="@+id/movie3"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_margin="4dp"
-                android:background="@drawable/ovie2"
-                app:layout_constraintDimensionRatio="1:1"
-                app:layout_constraintEnd_toStartOf="@id/movie4"
-                app:layout_constraintStart_toEndOf="@+id/movie2"
-                app:layout_constraintTop_toBottomOf="@+id/heading"
-                tools:ignore="ObsoleteLayoutParam" />
-
-            <TextView
-                android:id="@+id/nameCasts3"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginTop="4dp"
-                android:gravity="center_vertical"
-                android:lineSpacingExtra="2sp"
-                android:minLines="2"
-                android:text="@string/robertDown"
-                android:textAppearance="@style/robertDown"
-                app:layout_constraintEnd_toEndOf="@+id/movie3"
-                app:layout_constraintStart_toStartOf="@+id/movie3"
-                app:layout_constraintTop_toBottomOf="@+id/movie3"
-                tools:ignore="ObsoleteLayoutParam" />
-
-            <View
-                android:id="@+id/movie4"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="4dp"
-                android:background="@drawable/ovie3"
-                app:contentDescription="1:1"
-                app:layout_constraintDimensionRatio="1:1"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/fmdRecyclerActor"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/movie3"
-                app:layout_constraintTop_toBottomOf="@+id/heading"
-                tools:ignore="ObsoleteLayoutParam" />
-
-            <TextView
-                android:id="@+id/nameCasts4"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginTop="4dp"
-                android:gravity="center_vertical"
-                android:lineSpacingExtra="2sp"
-                android:minLines="2"
-                android:text="@string/robertDown"
-                android:textAppearance="@style/robertDown"
-                app:layout_constraintEnd_toEndOf="@+id/movie4"
-                app:layout_constraintStart_toStartOf="@+id/movie4"
-                app:layout_constraintTop_toBottomOf="@+id/movie4"
-                tools:ignore="ObsoleteLayoutParam" />
-
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/heading" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
